--- a/vignettes/uploading_new_round.Rmd
+++ b/vignettes/uploading_new_round.Rmd
@@ -1,16 +1,10 @@
 ---
-title: "Scorecard Update"
-author: "Erik Larsen"
-date: "`r Sys.Date()`"
-output: 
-  html_document:
-    self-contained: no
-    code_folding: hide
-    toc: TRUE
-    toc_float:
-      collapsed: TRUE
-      smooth_scroll: TRUE
-    fig_caption: TRUE
+title: "Uploading New Scores"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Uploading New Scores}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 # Environment {.tabset .tabset-fade .tabset-pills}
@@ -46,16 +40,22 @@ con <- RSQLite::dbConnect(drv = RSQLite::SQLite(), dbname = 'golf_data')
 ## Input the Data
 
 ```{r Annotate the new data, include = T, message = F, warning = F, eval = T}
-round_course <- 'Randolph'
-round_date <- '2026-01-25'
-round_tees <- 'combo'
-hole_scores <- c()
-FIRs <- c()
-GIRs <- c()
-putts_rec <- c()
-chips_rec <- c()
-penalties_rec <- c()
-tee_clubs <- c()
+round_course <- 'Silverbell'
+round_date <- '2026-01-18'
+round_tees <- 'white'
+hole_scores <- c(4, 6, 4, 4, 6, 4, 5, 6, 3,
+                 5, 6, 6, 5, 5, 4, 4, 5, 5)
+FIRs <- c(0, 0, 0, 1, 1, 0, 0, 0, 0,
+          1, 0, 0, 0, 1, 0, 0, 0, 1)
+GIRs <- c(0, 0, 0, 1, 0, 1, 1, 0, 1,
+          1, 0, 0, 0, 1, 0, 0, 0, 0)
+putts_rec <- c(1, 2, 1, 2, 2, 3, 2, 2, 2,
+               3, 2, 3, 2, 3, 1, 2, 1, 1)
+chips_rec <- c(1, 0, 1, 0, 2, 0, 0, 0, 0,
+               0, 2, 2, 1, 0, 1, 1, 0, 1)
+penalties_rec <- c(rep(0, 18))
+tee_clubs <- c('4', 'D', 'GW', 'D', 'D', '7', 'D', '4', '8',
+               'D', '4', '9', 'D', 'D', 'D', '5', '4', 'D')
 index <- 10.2
 ```
 
@@ -528,4 +528,3 @@ scores_sum |>
 ```{r Disconnect from the DB, include = T, message = F, warning = F, echo = F, eval = T}
 DBI::dbDisconnect(conn = con)
 ```
-
